--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
     <img src="IMG/j2g.png" alt="company logo image" style="height: 130px;" width="130px" />
     
         </style>
+          <button>
+             <a href="about.html">Web page two</a> 
+            </button>
   </body>
 </html>
